--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 OPENAI_API_KEY=your_openai_api_key_here
+ASSEMBLYAI_API_KEY=your_assemblyai_api_key_here
+GROQ_API_KEY=your_groq_api_key_here
 SECRET_KEY=your_secret_key_here
