--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: voice-notes-ai
+    name: noteflow-ai
     runtime: python
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn wsgi:application --bind 0.0.0.0:$PORT --workers 2 --timeout 120
@@ -16,6 +16,6 @@ services:
       - key: OPENAI_API_KEY
         sync: false
     disk:
-      name: voice-notes-data
+      name: noteflow-data
       mountPath: /opt/render/project/src/static/uploads
       sizeGB: 1
