--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ python-dotenv==1.0.0
 openai==2.16.0
 assemblyai==0.49.0
 flask-sqlalchemy==3.1.1
+flask-migrate==4.0.5
 Werkzeug==3.0.1
 httpx==0.27.0
 gunicorn==21.2.0
@@ -12,3 +13,4 @@ python-docx==1.1.0
 beautifulsoup4==4.12.3
 youtube-transcript-api==0.6.1
 moviepy==1.0.3
+psycopg2-binary==2.9.9
