add PostgreSQL with Python 3.12 fix

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,7 @@ OPENAI_API_KEY=your_openai_api_key_here
 ASSEMBLYAI_API_KEY=your_assemblyai_api_key_here
 GROQ_API_KEY=your_groq_api_key_here
 SECRET_KEY=your_secret_key_here
+
+# Database (Optional - leave blank to use SQLite)
+# For PostgreSQL: postgresql://username:password@hostname:port/database
+# DATABASE_URL=postgresql://postgres:password@localhost:5432/noteflow_dev
