--- a/render.yaml
+++ b/render.yaml
@@ -3,10 +3,8 @@ services:
     name: noteflow-ai
     runtime: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn wsgi:application --bind 0.0.0.0:$PORT --workers 2 --timeout 120
+    startCommand: ./start.sh
     envVars:
-      - key: PYTHON_VERSION
-        value: 3.10.0
       - key: SECRET_KEY
         generateValue: true
       - key: ASSEMBLYAI_API_KEY
